--- a/myproject/myapp/templates/edit_accounts.html
+++ b/myproject/myapp/templates/edit_accounts.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <form action="{% url 'edit_account' %}" method="get">
-        <label for="email">Enter Email:</label>
-        <input type="email" id="email" name="email" required>
+        <label for="account_number">Enter Account Number:</label>
+        <input type="number" id="account_number" name="account_number" required>
         <button type="submit">Edit Account</button>
-    </form>
+    </form>    
 </body>
 </html>
