--- a/myproject/myapp/templates/home.html
+++ b/myproject/myapp/templates/home.html
@@ -79,7 +79,11 @@
         </div>
 
         <div class="rows">
-          <div class="options">ATM Application</div>
+          <div class="options">
+            <a href="{% url 'check_account' %}">
+              <button class="btns">ATM Application</button>
+            </a>
+          </div>
           <div class="options">Deposite</div>
           <div class="options">Withdraw</div>
         </div>
