--- a/myproject/myapp/templates/delete_account.html
+++ b/myproject/myapp/templates/delete_account.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delete Account</title>
+    <title>Home</title>
 </head>
 <body>
-    <h1>Delete Account</h1>
-    <form method="POST">
-        {% csrf_token %}
-        <label for="email">Enter Email:</label>
-        <input type="email" id="email" name="email" required>
-        <button type="submit">Delete</button>
+    <form action="{% url 'edit_account' %}" method="get">
+        <label for="account_number">Enter Account Number:</label>
+        <input type="number" id="account_number" name="account_number" required>
+        <button type="submit">Edit Account</button>
     </form>
 </body>
 </html>
