--- a/myproject/myapp/templates/delete_account.html
+++ b/myproject/myapp/templates/delete_account.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Delete Account</title>
+    <link rel="website icon" type="png" href="/static/images/icon.jpg">
 </head>
 <body>
-    <form action="{% url 'edit_account' %}" method="get">
-        <label for="account_number">Enter Account Number:</label>
+    <h1>Delete Account</h1>
+    <form method="POST">
+        {% csrf_token %}
         <input type="number" id="account_number" name="account_number" required>
-        <button type="submit">Edit Account</button>
+        <button type="submit">Delete</button>
     </form>
 </body>
 </html>
