--- a/myproject/myapp/templates/edit_account.html
+++ b/myproject/myapp/templates/edit_account.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Account</title>
+    <link rel="website icon" type="png" href="/static/images/icon.jpg">
 </head>
 <body>
     <h1>Edit Account</h1>
