--- a/myproject/myapp/templates/edit_accounts.html
+++ b/myproject/myapp/templates/edit_accounts.html
@@ -6,8 +6,8 @@
     <title>Home</title>
 </head>
 <body>
+    <h1>Enter Account Number for Edit</h1>
     <form action="{% url 'edit_account' %}" method="get">
-        <label for="account_number">Enter Account Number:</label>
         <input type="number" id="account_number" name="account_number" required>
         <button type="submit">Edit Account</button>
     </form>    
