--- a/myproject/myapp/templates/user_form.html
+++ b/myproject/myapp/templates/user_form.html
@@ -7,7 +7,7 @@
     <link rel="website icon" type="png" href="/static/images/icon.jpg">
 </head>
 <body>
-    <h1>Fill the Form</h1>
+    <h1>Account Opening Form</h1>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
