--- a/myproject/myapp/static/css/styles2.css
+++ b/myproject/myapp/static/css/styles2.css
@@ -3,9 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-.center{
-    background-color: #071952;
+.btns{
+    background: none; 
+    border: none; 
+    color: #fff;
+    width: 350px;
+    height: 100px;
 }
 
 .header1{
@@ -49,7 +52,7 @@
     background-color: #071952;
     color: #fff;
     font-size: 1.2rem;
-    padding-top: 20px;
+    padding: 20px;
 }
 
 footer{
@@ -60,45 +63,12 @@ footer{
     color: #fff;
 }
 
-.center{
-    display: flex;
-}
-
-.left{
-    height: 500px;
-    width: 80%;
-    float: left;
-    margin-left: 2%;
-    padding: 2%;
-}
-
-.right{
-    height: 440px;
-    border: 1px solid black;
-    width: 20%;
-    border-radius: 30px 0 0 30px;
-    padding: 2% 2% 0 2%;
-    background-color: #4C3BCF;
-    margin: 30px 0;
-    color: #fff;
-}
-
-.rows{
-    display: flex;
-    justify-content: space-between;
-    height: 100px;
-    margin-bottom: 10px;
-}
-
 .options{
     display: grid;
     border-radius: 20px 0 20px 0;
     text-align: center;
     font-size: 1.5rem;
     font-family: 'Times New Roman', Times, serif;
-    width: 300px;
-    height: 100px;
-    padding: 3.5%;
     color: #FDFFE2;
     cursor: pointer;
     margin: 1%;
@@ -110,8 +80,94 @@ footer{
     box-shadow: 5px 10px 20px cyan;
 }
 
-#th{
-    width: 98%;
-    margin-top: 20px;
 
+.col{
+border: 1px solid black;
+background-color: #071952;
+}
+.col11{
+border: 1px solid black;
+background-color: #071952;
+margin: 10px 10px 20px 10px;
+height: 100px;
+}
+.col12 .btns{
+width: 450px;
+}
+.col12{
+border: 1px solid black;
+background-color: #071952;
+margin: 10px 10px 20px 10px;
+}
+
+.containers{
+background-color: #071952;
+}
+.container {
+display: grid;
+grid-template-columns: repeat(3, 1fr); /* 3 columns of equal width */
+grid-template-rows: repeat(3, auto) 1fr; /* 3 rows with auto height, and 1 row with custom layout */
+gap: 10px; /* Gap between columns and rows */
+}
+.col{
+border: 1px solid black;
+}
+
+/* Last row customization */
+.last-row {
+grid-column: 1 / span 3; /* Make the row span across all 3 columns */
+display: grid;
+grid-template-columns: 1fr 2fr; /* Two columns with 1/3 and 2/3 width */
+}
+
+.last-row .col1 {
+grid-column: 1 / 2;
+border: 1px solid black;
+/* margin-right: 5px; */
+}
+
+.last-row .col2 {
+grid-column: 2 / 3;
+border: 1px solid black;
+}
+
+.container {
+display: grid;
+grid-template-columns: repeat(3, 1fr); /* 3 columns of equal width */
+grid-template-rows: repeat(4, auto); /* 4 rows */
+gap: 10px; /* Gap between columns and rows */
+}
+
+/* Media query for screens 800px and below */
+@media screen and (max-width: 800px) {
+    .container {
+        grid-template-columns: 1fr; /* Single column layout */
+        grid-auto-rows: auto; /* Automatically adjust row heights */
+    }
+
+    .container > div {
+        grid-column: 1 / -1; /* Each column will now take full width of the row */
+    }
+    .last-row {
+        grid-template-columns: 1fr; /* Stack columns in last row vertically */
+    }
+
+    .last-row .col1, .last-row .col2 {
+        grid-column: 1 / -1; /* Each column in last row takes full width */
+    }
+    .btns{
+        width: 200px;
+    }
+    .col11 .btns{
+        width: 100px;
+    }
+    .col12 .btns{
+        width: 100px;
+    }
+    .options{
+        margin: 2% 5%;
+    }
+    .col11, .col12{
+        margin-top: 0;
+    }
 }
