--- a/myproject/myapp/templates/home.html
+++ b/myproject/myapp/templates/home.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Dashboard</title>
     <link rel="website icon" type="png" href="/static/images/icon.jpg">
@@ -11,11 +11,9 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <style>
-      .btns{
-        background: none; 
-        border: none; 
-        color: #fff;
-    }
+      .row{
+      margin: 0;
+      }
     </style>
 </head>
 <body>
@@ -28,28 +26,23 @@
         </form>
     </header>
 
-    <div id="carouselExampleIndicators" class="carousel slide">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="imr" src="/static/images/1st.jpeg" class="d-block w-100" alt="image">
-        </div>
-        <div class="carousel-item">
+          </div>
+          <div class="carousel-item">
           <img class="imr" src="/static/images/2nd.jpg" class="d-block w-100" alt="image">
-        </div>
-        <div class="carousel-item">
+          </div>
+          <div class="carousel-item">
           <img class="imr" src="/static/images/3rd.avif" class="d-block w-100" alt="image">
-        </div>
+          </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
@@ -57,74 +50,82 @@
 
     <marquee behavior="" direction="left" class="br1">Latest Updates: Updates are comming soon..!</marquee>
 
-    <div class="center">
-      <div class="left">
-
-        <div class="rows">
-          <div class="options">
-            <a href="{% url 'user_form' %}">
-              <button class="btns">Create Account</button>
-            </a>
-          </div>
-          <div class="options">
-            <a href="{% url 'edit_accounts' %}">
-              <button class="btns">Edit Account</button>
-            </a>
-          </div>
-          <div class="options">
-            <a href="{% url 'delete_account' %}">
-              <button class="btns">Delete Account</button>
-            </a>
-          </div>
+    <div class="containers">
+        <!-- First row with 3 columns -->
+        <div class="row" style="margin-right: 0;">
+            <div class="col options">
+                <a href="{% url 'user_form' %}">
+                <button class="btns">Create Account</button>
+                </a>
+            </div>
+            <div class="col options">
+                <a href="{% url 'edit_accounts' %}">
+                    <button class="btns">Edit Account</button>
+                </a>
+            </div>
+            <div class="col options">
+                <a href="{% url 'delete_account' %}">
+                    <button class="btns">Delete Account</button>
+                </a>
+            </div>
         </div>
-
-        <div class="rows">
-          <div class="options">
-            <a href="{% url 'atmappln' %}">
-              <button class="btns">ATM Application</button>
-            </a>
-          </div>
-          <div class="options">
-            <a href="{% url 'deposite_amount' %}">
-              <button class="btns">Deposite</button>
-            </a>
-          </div>
-          <div class="options">
-            <a href="{% url 'withdraw_amount' %}">
-              <button class="btns">Withdraw</button>
-            </a>
-          </div>
+    
+        <!-- Second row with 3 columns -->
+        <div class="row">
+            <div class="col options">
+                <a href="{% url 'atmappln' %}">
+                    <button class="btns">ATM Application</button>
+                </a>
+            </div>
+            <div class="col options">
+                <a href="{% url 'deposite_amount' %}">
+                    <button class="btns">Deposite</button>
+                </a>
+            </div>
+            <div class="col options">
+                <a href="{% url 'withdraw_amount' %}">
+                    <button class="btns">Withdraw</button>
+                </a>
+            </div>
         </div>
-
-        <div class="rows">
-          <div class="options">Loan</div>
-          <div class="options">FD</div>
-          <div class="options">
-            <a href="{% url 'atm_redirect' %}">
-              <button class="btns">ATM</button></a>
-          </div>
+    
+        <!-- Third row with 3 columns -->
+        <div class="row">
+            <div class="col options">
+                <a href="{% url 'loan_fetch' %}">
+                    <button class="btns">Loan</button>
+                </a>
+            </div>
+            <div class="col options">
+                <a href="{% url 'fetch_fd' %}">
+                    <button class="btns">FD</button>
+                </a>
+            </div>
+            <div class="col options">
+                <a href="{% url 'view_transactions' %}">
+                    <button class="btns">SB Transactions</button>
+                </a>
+            </div>
         </div>
-
-        <div class="options" id="th">
-            <a href="{% url 'view_transactions' %}">
-              <button class="btns">Transaction History</button>
-            </a>
+    
+        <!-- Last row with 1/3 and 2/3 layout -->
+        <div class="last-row">
+            <div class="col11 options">
+                <a href="{% url 'loan_transactions' %}">
+                    <button class="btns">Loan Transactions</button>
+                </a>
+            </div>
+            <div class="col12 options">
+                <a href="{% url 'atm_redirect' %}">
+                    <button class="btns">ATM</button>
+                </a>
+            </div>
+            <div class="col13"></div> <!-- Hidden third column -->
         </div>
-      </div>
-
-      <div class="right"><b>NOTICE:</b>
-        <ul>
-          <li>Online Bank Service will be 24 Hours</li>
-          <li>Minimum Account balance should be Rs.500</li>
-          <li>Zero balance Account is also available..!</li>
-          <!-- <li>Minimum age for Major Account is 18years</li>
-          <li>Minimum 50,000 can be withdrawn per day</li> -->
-        </ul>
-      </div>
     </div>
 
     <footer>
-      &copy; 2024, UNIQUE BANK, All rights reserved
+        &copy; 2024, UNIQUE BANK, All rights reserved
     </footer>
 </body>
 </html>
