--- a/myproject/myapp/templates/edit_accounts.html
+++ b/myproject/myapp/templates/edit_accounts.html
@@ -23,14 +23,13 @@ form {
     border-radius: 10px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
     width: 100%;
-    max-width: 400px;
+    max-width: 500px;
 }
 
 /* Header Styling */
 h1 {
     color: #333;
-    font-size: 24px;
-    margin-bottom: 20px;
+    margin: 0 0 30px 0;
     text-align: center;
 }
 
@@ -91,10 +90,10 @@ label {
 </head>
 <body>
     <form action="{% url 'edit_account' %}" method="get">
-        <h1>Edit Form</h1><br>
+        <h1>Edit Form</h1>
         <label for="account_number">Account Number:</label>
         <input type="number" id="account_number" name="account_number" required>
-        <button type="submit">Edit Account</button>
+        <button type="submit">Fetch Details</button>
     </form>    
 </body>
 </html>
