--- a/myproject/myapp/templates/user_form.html
+++ b/myproject/myapp/templates/user_form.html
@@ -12,10 +12,10 @@
             padding: 20px;
         }
 
-        h2{
+        h1{
             text-align: center;
-            margin-bottom: 40px;
             color: #333;
+            margin: 0 0 30px 0;
         }
 
         form {
@@ -80,6 +80,7 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 16px;
+            width: 100%;
         }
 
         button:hover {
@@ -90,7 +91,7 @@
 </head>
 <body>
         <form method="post" enctype="multipart/form-data">
-            <h2>Account Opening Form</h2>
+            <h1>Account Opening Form</h1>
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit">Submit</button>
