--- a/myproject/myapp/templates/balance_enquiry.html
+++ b/myproject/myapp/templates/balance_enquiry.html
@@ -18,9 +18,9 @@
         }
 
         .container {
-            width: 500px;
+            width: 440px;
             background-color: white;
-            padding: 20px;
+            padding: 30px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
             text-align: center;
@@ -30,7 +30,7 @@
         h1 {
             color: #444;
             font-size: 32px;
-            margin-bottom: 20px;
+            margin: 0 0 30px 0;
         }
 
         p {
@@ -59,7 +59,6 @@
             text-decoration: none;
         }
 
-        /* Mobile view adjustments */
         @media (max-width: 600px) {
             .container {
                 width: 90%;
