--- a/myproject/myapp/templates/check_account.html
+++ b/myproject/myapp/templates/check_account.html
@@ -9,7 +9,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
-            padding: 30px;
+            padding: 20px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -17,10 +17,10 @@
 
         .form-container {
             background-color: #fff;
-            padding: 20px;
+            padding: 30px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
+            max-width: 440px;
             width: 100%;
         }
 
@@ -47,7 +47,7 @@
             border-radius: 4px;
             margin-bottom: 20px;
             font-size: 16px;
-            width: calc(100% - 22px);  /* Adjusting for padding and border */
+            width: calc(100% - 22px);
         }
 
         button {
@@ -66,12 +66,12 @@
         }
 
         .error {
-            color: #ff4d4d;
-            background-color: #ffe6e6;
+            color: #fff;
             padding: 10px;
             border-radius: 4px;
-            margin-bottom: 20px;
             text-align: center;
+            background-color: #ff4d4d;
+            margin-bottom: 20px;
         }
 
         .info {
@@ -87,13 +87,14 @@
 <body>
     <div class="form-container">
         <h1>ATM Application</h1><br>
-        {% if error %}
-            <div class="error">{{ error }}</div>
-        {% endif %}
+        
         <form method="post">
             {% csrf_token %}
             <label for="account_number">Account Number:</label>
             {{ form.account_number }}
+            {% if error %}
+                <div class="error">{{ error }}</div>
+            {% endif %}
             <button type="submit">Submit</button>
         </form>
     </div>
