--- a/myproject/myapp/templates/close_loan.html
+++ b/myproject/myapp/templates/close_loan.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="website icon" type="png" href="/static/images/icon.jpg">
+    <title>Close Loan</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,7 +19,7 @@
         h1 {
             color: #333;
             text-align: center;
-            margin: 0;
+            margin: 0 0 30px 0;
         }
 
         .form-container {
@@ -26,7 +27,7 @@
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
+            max-width: 440px;
             width: 100%;
             position: relative;
         }
