--- a/myproject/myapp/templates/deposit.html
+++ b/myproject/myapp/templates/deposit.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deposit</title>
     <link rel="website icon" type="png" href="/static/images/icon.jpg">
+    <title>Deposit</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -18,7 +18,7 @@
         }
 
         .container {
-            width: 500px;
+            width: 440px;
             background-color: white;
             padding: 30px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -29,7 +29,7 @@
         h1 {
             font-size: 28px;
             color: #333;
-            margin-bottom: 20px;
+            margin: 0 0 30px 0;
         }
 
         h2 {
@@ -38,13 +38,9 @@
             margin-bottom: 15px;
         }
 
-        form {
-            margin-bottom: 20px;
-        }
-
         button {
             width: 100%;
-            padding: 12px;
+            padding: 10px;
             background-color: #007bff;
             color: white;
             border: none;
@@ -58,22 +54,23 @@
             background-color: #0056b3;
         }
 
-        p {
-            color: #ff4d4d;
-            font-size: 16px;
+        .error {
+            color: #fff;
+            padding: 10px;
+            border-radius: 4px;
+            text-align: center;
+            background-color: #ff4d4d;
         }
         
         input[type="number"] {
-            width: 100%; /* Adjust width to match button */
-            padding: 12px;
-            margin-bottom: 10px;
+            width: 100%;
+            padding: 10px;
             border: 1px solid #ccc;
             border-radius: 6px;
             box-sizing: border-box;
             font-size: 16px;
         }
 
-        /* Mobile view adjustments */
         @media (max-width: 600px) {
             .container {
                 width: 90%;
@@ -98,19 +95,16 @@
         <h1>Enter ATM 6-digit PIN</h1>
 
         {% if not pin_validated %}
-            <!-- Step 1: Enter PIN -->
             <form method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
+                {% if pin_error %}
+                    <p class="error">{{ pin_error }}</p>
+                {% endif %}
                 <button type="submit" name="check_pin">Submit PIN</button>
             </form>
 
-            {% if pin_error %}
-                <p>{{ pin_error }}</p>
-            {% endif %}
-
         {% else %}
-            <!-- Step 2: Enter Deposit Amount -->
             <h2>Enter Amount</h2>
             <form method="post">
                 {% csrf_token %}
