--- a/myproject/myapp/templates/deposit_amount.html
+++ b/myproject/myapp/templates/deposit_amount.html
@@ -20,13 +20,14 @@
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
+            max-width: 440px;
             width: 100%;
         }
 
         h1 {
             color: #333;
-            text-align: center;margin: 0 0 30px 0;
+            text-align: center;
+            margin: 0 0 30px 0;
         }
 
         form {
@@ -47,7 +48,7 @@
             border-radius: 4px;
             margin-bottom: 20px;
             font-size: 16px;
-            width: calc(100% - 22px);  /* Adjusting for padding and border */
+            width: calc(100% - 22px);
         }
 
         button {
@@ -67,12 +68,12 @@
         }
 
         .error {
-            color: #ff4d4d;
-            background-color: #ffe6e6;
+            color: #fff;
             padding: 10px;
             border-radius: 4px;
-            margin-bottom: 20px;
             text-align: center;
+            background-color: #ff4d4d;
+            margin-bottom: 20px;
         }
 
         .info {
@@ -91,9 +92,11 @@
             border-radius: 4px;
             background-color: #f9f9f9;
         }
+
         .input-container {
-            margin-top: 5px; /* Apply margin to the account number field */
+            margin-top: 5px;
         }
+
         p {
             margin: 5px 0;
         }
@@ -102,9 +105,7 @@
 <body>
     <div class="form-container">
         <h1>Deposit Form</h1>
-        {% if error %}
-            <div class="error">{{ error }}</div>
-        {% endif %}
+        
         <form method="post">
             {% csrf_token %}
             <div>
@@ -112,6 +113,9 @@
                 <div class="input-container">
                     {{ form.account_number }}
                 </div>
+                {% if error %}
+                    <div class="error">{{ error }}</div>
+                {% endif %}
                 <button type="submit" name="fetch_details">Fetch Details</button>
             </div>
             {% if account_details %}
