--- a/myproject/myapp/templates/loan_list.html
+++ b/myproject/myapp/templates/loan_list.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="website icon" type="png" href="/static/images/icon.jpg">
     <title>Loan List</title>
     <style>
         body {
@@ -19,7 +20,7 @@
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
+            max-width: 440px;
             width: 100%;
         }
 
@@ -35,7 +36,6 @@
 
         .loan-item {
             margin-bottom: 20px;
-            /* padding: 15px; */
             border: 1px solid #ddd;
             border-radius: 5px;
             background-color: #f9f9f9;
@@ -57,7 +57,7 @@
         }
 
         .loan-item .loan-details .label {
-            width: 220px;
+            width: 210px;
             font-weight: bold;
             color: #555;
             border-top: 1px solid #ddd;
