--- a/myproject/myapp/templates/pay_loan.html
+++ b/myproject/myapp/templates/pay_loan.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pay Loan</title>
     <link rel="website icon" type="png" href="/static/images/icon.jpg">
+    <title>Pay Loan</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,7 +19,7 @@
         h1 {
             color: #333;
             text-align: center;
-            margin: 0;
+            margin: 0 0 30px 0;
         }
 
         .message {
@@ -45,11 +45,11 @@
 
         form {
             background-color: #fff;
-            padding: 20px;
+            padding: 30px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             width: 100%;
-            max-width: 500px;
+            max-width: 440px;
             text-align: center;
         }
 
@@ -115,7 +115,6 @@
         <h1>Loan Payment</h1><br>
         {% csrf_token %}
         
-        <!-- Display form errors -->
         {% if form.errors %}
         <ul class="errorlist">
             {% for field in form %}
