--- a/myproject/myapp/templates/deposit_amount.html
+++ b/myproject/myapp/templates/deposit_amount.html
@@ -126,7 +126,7 @@
                     <p><strong>Current Balance:</strong> ₹ {{ account_details.amount }}</p>
                 </div><br>
                 <div>
-                    <label for="update_amount">Account Number:</label>
+                    <label for="update_amount">Enter Amount:</label>
                     {{ update_form.as_p }}
                     <button type="submit" name="update_amount">Deposit</button>
                 </div>
