--- a/myproject/myapp/static/css/styles2.css
+++ b/myproject/myapp/static/css/styles2.css
@@ -89,7 +89,7 @@ footer{
 .col11{
     border: 1px solid black;
     background-color: #071952;
-    margin: 10px 10px 20px 10px;
+    margin: 5px 10px 20px 10px;
 }
 
 .col12 .btns{
@@ -99,7 +99,7 @@ footer{
 .col12{
     border: 1px solid black;
     background-color: #071952;
-    margin: 10px 10px 20px 10px;
+    margin: 5px 10px 20px 10px;
 }
 
 .containers{
@@ -165,7 +165,7 @@ footer{
     }
 
     .col11 .btns{
-        width: 200px;
+        width: 300px;
         height: 50px;
     }
 
@@ -177,8 +177,12 @@ footer{
         margin: 2% 5%;
     }
     
-    .col11, .col12{
-        margin-bottom: 10px;
+    .col11{
+        margin-bottom: 5px;
+    }
+
+    .col12{
+        margin-bottom: 20px;
     }
 
     a{
